[gd_scene load_steps=14 format=3 uid="uid://de451u2o4e3ha"]

[ext_resource type="Texture2D" uid="uid://mm10su1suc36" path="res://graphics/chain-placeholder.png" id="1_ggqgv"]
[ext_resource type="Script" path="res://scenes/weapon/chain_hook.gd" id="1_gk8y0"]
[ext_resource type="Texture2D" uid="uid://dua845yfiy6j5" path="res://graphics/chain-hook.png" id="2_pp3qu"]
[ext_resource type="Script" path="res://scenes/weapon/Hook.gd" id="3_vdwwx"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="4_5acc8"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="5_o7ljy"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="6_wombd"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="7_654nv"]
[ext_resource type="AudioStream" uid="uid://i2omlvu6mgoi" path="res://sounds/electric_loop.wav" id="9_1qrph"]
[ext_resource type="AudioStream" uid="uid://brffhihpejfg3" path="res://sounds/chain_loop.wav" id="10_22qcm"]
[ext_resource type="AudioStream" uid="uid://b7ddwy03mdai0" path="res://sounds/fire1.wav" id="11_uvoq0"]
[ext_resource type="AudioStream" uid="uid://dvo8xc2yhskhw" path="res://sounds/concrete_impact_bullet3.wav" id="12_a2t7d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h33oq"]
size = Vector2(34, 30)

[node name="ChainHook" type="Node2D"]
script = ExtResource("1_gk8y0")

[node name="Chain" type="Line2D" parent="."]
unique_name_in_owner = true
z_index = 1
texture_repeat = 2
points = PackedVector2Array(0, 0, 68, 0)
texture = ExtResource("1_ggqgv")
texture_mode = 1

[node name="Hook" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(68, 0)
collision_layer = 16
collision_mask = 5
script = ExtResource("3_vdwwx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hook"]
shape = SubResource("RectangleShape2D_h33oq")
debug_color = Color(0.878431, 0.333333, 0.180392, 0.419608)

[node name="HookSprite" type="Sprite2D" parent="Hook"]
unique_name_in_owner = true
z_index = 1
texture = ExtResource("2_pp3qu")

[node name="StateChart" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_5acc8")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("5_o7ljy")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/Root"]
script = ExtResource("6_wombd")

[node name="toFiring" type="Node" parent="StateChart/Root/Idle"]
script = ExtResource("7_654nv")
to = NodePath("../../Firing")
event = &"player_shoots"

[node name="Firing" type="Node" parent="StateChart/Root"]
script = ExtResource("6_wombd")

[node name="toIdle" type="Node" parent="StateChart/Root/Firing"]
script = ExtResource("7_654nv")
to = NodePath("../../Idle")
event = &"player_misses"

[node name="toShocking" type="Node" parent="StateChart/Root/Firing"]
script = ExtResource("7_654nv")
to = NodePath("../../Shocking")
event = &"enemy_hit"

[node name="Shocking" type="Node" parent="StateChart/Root"]
script = ExtResource("6_wombd")

[node name="toIdle" type="Node" parent="StateChart/Root/Shocking"]
script = ExtResource("7_654nv")
to = NodePath("../../Idle")
event = &"player_misses"

[node name="ElectricLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_1qrph")
volume_db = -10.0

[node name="ChainLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_22qcm")
volume_db = -10.0

[node name="FireSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_uvoq0")
volume_db = -15.0

[node name="HitDirt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_a2t7d")
volume_db = -20.0

[connection signal="area_entered" from="Hook" to="." method="_on_hook_area_entered"]
[connection signal="area_exited" from="Hook" to="." method="_on_hook_area_exited"]
[connection signal="body_entered" from="Hook" to="." method="_on_hook_body_entered"]
[connection signal="state_entered" from="StateChart/Root/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Firing" to="." method="_on_firing_state_entered"]
[connection signal="state_exited" from="StateChart/Root/Firing" to="." method="_on_firing_state_exited"]
[connection signal="state_physics_processing" from="StateChart/Root/Firing" to="." method="_on_firing_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Shocking" to="." method="_on_shocking_state_entered"]
